traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: ')' expected but ';' found.
  while (!posFinale();) {
                     ^Snake:3: error: illegal start of statement
  while (!posFinale();) {
                      ^